Fixed overflow/scroll issue with termsAgreementBox style on TermsOfUsePage.

--- a/src/DVN-web/web/resources/stylesheet.css
+++ b/src/DVN-web/web/resources/stylesheet.css
@@ -1302,7 +1302,7 @@ a.requestHmpgSideLink:link, a.requestHmpgSideLink:visited, a.requestHmpgSideLink
 .dvn_createDvRequest .requestContinueLink {padding: 2em 0 0 0; text-align: center;}
 .termsAgreementMessage {padding-bottom: 10px; font-weight: bold;}
 span.termsAgreementMessageTitle {display: block; padding-top: 1em; color: #526f76; font-size: 120% !important; font-weight: bold; text-transform: uppercase;}
-.termsAgreementBox {margin-bottom: 20px; padding: 4px; width: 450px; height: 300px; border: 1px solid #035899; overflow-y: scroll;}
+.termsAgreementBox {margin-bottom: 20px; padding: 4px; width: 450px; height: 300px; border: 1px solid #035899; overflow: scroll; overflow-x: auto;}
 .termsAgreementButtons {padding-top: 20px; width: 450px; text-align: center;}
 .dvn_createDvRequest .requestContentSucess a {font-weight: bold;}
 .dvn_createDvRequest .requestContentSucess ul {margin-left: 1.5em; list-style: disc;}
